@@ -1,6 +1,7 @@
 1.4.0i2:
     Core & Setup:
     * 3648 FIX: Fixed log file parsing of host states...
+    * 3965 FIX: Nagios: Improved handling of broken core config...
 
     Checks & Agents:
     * 3841 cups_queues: thresholds are now configurable in WATO...
